SERVER-13981 MR inc collection should not be replicated

Introduced in commit 8416afb7c5724076b1231626f27f5198a5a2cce7. Prior to that,
the collection was not replicated.